src/objects/BT_CO_ARMS_OutstandingAmountInterface__c.object
<CustomObject>
    <fields>
        <fullName>Batch_Job_Id__c</fullName>
        <label>Batch_Job_Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Batch_Run_Date__c</fullName>
        <label>Batch Run Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Validation_Details__c</fullName>
        <label>Validation Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Validation_Status__c</fullName>
        <label>Validation Status</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>accountNumber__c</fullName>
        <label>accountNumber</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>accountType__c</fullName>
        <label>accountType</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>badDebtRecoveryAmount__c</fullName>
        <label>badDebtRecoveryAmount</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bankCode__c</fullName>
        <label>bankCode</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>creditBalance__c</fullName>
        <label>creditBalance</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>currentOverdueAmount__c</fullName>
        <label>currentOverdueAmount</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>debitManagementStatus__c</fullName>
        <label>debitManagementStatus</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>giroAccountNumber__c</fullName>
        <label>giroAccountNumber</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>indicatorForWriteOff__c</fullName>
        <label>indicatorForWriteOff</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>negativeAmountIndicator1__c</fullName>
        <label>negativeAmountIndicator1</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>negativeAmountIndicator2__c</fullName>
        <label>negativeAmountIndicator2</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>negativeAmountIndicatorFor10th__c</fullName>
        <label>negativeAmountIndicatorFor10th</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>negativeAmountIndicatorFor11th__c</fullName>
        <label>negativeAmountIndicatorFor11th</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>negativeAmountIndicatorFor12th__c</fullName>
        <label>negativeAmountIndicatorFor12th</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>negativeAmountIndicatorFor1st__c</fullName>
        <label>negativeAmountIndicatorFor1st</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>negativeAmountIndicatorFor2nd__c</fullName>
        <label>negativeAmountIndicatorFor2nd</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>negativeAmountIndicatorFor3rd__c</fullName>
        <label>negativeAmountIndicatorFor3rd</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>oustandingAmountFor10thPreviousMonth__c</fullName>
        <label>oustandingAmountFor10thPreviousMonth</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>oustandingAmountFor11thPreviousMonth__c</fullName>
        <label>oustandingAmountFor11thPreviousMonth</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>oustandingAmountFor12thPreviousMonth__c</fullName>
        <label>oustandingAmountFor12thPreviousMonth</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>oustandingAmountFor1stPreviousMonth__c</fullName>
        <label>oustandingAmountFor1stPreviousMonth</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>oustandingAmountFor2ndPreviousMonth__c</fullName>
        <label>oustandingAmountFor2ndPreviousMonth</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>oustandingAmountFor3rdPreviousMonth__c</fullName>
        <label>oustandingAmountFor3rdPreviousMonth</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>oustandingAmountForCurrentMonth__c</fullName>
        <label>oustandingAmountForCurrentMonth</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>overdueAmountFor10Months__c</fullName>
        <label>overdueAmountFor10Months</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>overdueAmountFor11Months__c</fullName>
        <label>overdueAmountFor11Months</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>overdueAmountFor12Months__c</fullName>
        <label>overdueAmountFor12Months</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>overdueAmountFor1Month__c</fullName>
        <label>overdueAmountFor1Month</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>synonym__c</fullName>
        <label>synonym</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>totalBadDebtAmount__c</fullName>
        <label>totalBadDebtAmount</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>totalOutstandingAmount__c</fullName>
        <label>totalOutstandingAmount</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>totalOverdueAmount__c</fullName>
        <label>totalOverdueAmount</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <label>BT_CO_ARMS_OutstandingAmountInterface</label>
    <nameField>
        <label>BT_CO_ARMS_ Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>BT_CO_ARMS_OutstandingAmountInterfaces</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>